--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Pátek, 08. 10. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Vývar se zeleninou a játrovou zavářkou</strong>
+<strong>Kulajda</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Asijské rýžové nudle s kuřecím masem a koriandrem</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							129,-
-						</span>
-</p>
-<p>
-<strong>Vepřová plec na cibulce s rýží</strong>
+<strong>Vepřová krkovička na houbách s rýží NEBO těstovinou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
+						</span>
+</p>
+<p>
+<strong>Dukátové buchtičky s vanilkovým krémem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							105,-
 						</span>
 </p>
 <p>
@@ -170,7 +170,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z cerstve makrely s ananasovou salsou, zeleninovy kuskus, salatek {L} 139</li><li>Peceny filet z cersve prazmy s ananasovou salsou, zeleninovy kuskus, salatek {L} 175</li><li>Pad ka Prao – thajske restovane veprove s cerstvym chilli, fazolovymi lusky, cesnekem a sazenym vejcem, jasminova ryze, salatek 139</li><li>Doruzova pecena prsicka z divoke kachny s visnovou omackou, gratinovane brambory, salatek 169</li><li>Zapecena dyne hokkaido plnena cizrnovym kari, jasminova ryze, salatek {veganske} 139</li></ol>
+<ol><li>Peceny pstruh s omackou z pecenych paprik, pecene brambory, salatek 139</li><li>Peceny filet z cerstve tresky s kaparovym maslem, bramborovy salat s cerstvymi okurkami, zelenou cibulkou, celozrnnou horcici a majonezou 169</li><li>Malajske vonave hovezi rendang s pecenymi bataty, jasminova ryze, salatek 139</li><li>Smazene rizecky ze seleci kyty, bramborovy salat s cerstvymi okurkami, zelenou cibulkou, celozrnnou horcici a majonezou, citron 169 </li><li>Thajske sataj kari s pecenymi bataty, gaj coj, arasidy, kokosovym mlekem a thajskou bazalkou, jasminova ryze {veganske] 139  </li></ol>
 </td>
 </tr>
 </table>
