Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -170,7 +170,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny pstruh s omackou z pecenych paprik, pecene brambory, salatek 139</li><li>Peceny filet z cerstve tresky s kaparovym maslem, bramborovy salat s cerstvymi okurkami, zelenou cibulkou, celozrnnou horcici a majonezou 169</li><li>Malajske vonave hovezi rendang s pecenymi bataty, jasminova ryze, salatek 139</li><li>Smazene rizecky ze seleci kyty, bramborovy salat s cerstvymi okurkami, zelenou cibulkou, celozrnnou horcici a majonezou, citron 169 </li><li>Thajske sataj kari s pecenymi bataty, gaj coj, arasidy, kokosovym mlekem a thajskou bazalkou, jasminova ryze {veganske] 139  </li></ol>
+<ol><li>Peceny pstruh s omackou z pecenych paprik, pecene brambory, salatek 139</li><li>Peceny filet z cerstve tresky s kaparovym maslem, bramborovy salat s cerstvymi okurkami, zelenou cibulkou, celozrnnou horcici a majonezou 169</li><li>Malajske vonave hovezi rendang s pecenymi bataty, jasminova ryze, salatek 139</li><li>Smazene rizecky ze seleci kyty, bramborovy salat s cerstvymi okurkami, zelenou cibulkou, celozrnnou horcici a majonezou, citron 169 (L)</li><li>Thajske sataj kari s pecenymi bataty, gaj coj, arasidy, kokosovym mlekem a thajskou bazalkou, jasminova ryze {veganske] 139  </li></ol>
 </td>
 </tr>
 </table>
