--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -2,7 +2,46 @@
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
-None
+<div class="containerPriceList">
+<span class="line"></span>
+<h5>Pondělí, 11. 10. 2021</h5>
+<span class="line"></span>
+<p>
+<strong>Kulajda</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							33,-
+						</span>
+</p>
+<p>
+<strong>Vepřová krkovička na houbách s rýží NEBO těstovinou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							127,-
+						</span>
+</p>
+<p>
+<strong>Dukátové buchtičky s vanilkovým krémem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							105,-
+						</span>
+</p>
+<p>
+<strong>Teplý bufet</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							35,-
+						</span>
+</p>
+<p>
+<strong>Salátový bufet</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							45,-
+						</span>
+</p>
+</div>
 </td>
 </tr>
 <table>
