--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -180,7 +180,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny pstruh s omackou z pecenych paprik, pecene brambory, salatek 139</li><li>Peceny filet z cerstve tresky s kaparovym maslem, bramborovy salat s cerstvymi okurkami, zelenou cibulkou, celozrnnou horcici a majonezou 169</li><li>Malajske vonave hovezi rendang s pecenymi bataty, jasminova ryze, salatek 139</li><li>Smazene rizecky ze seleci kyty, bramborovy salat s cerstvymi okurkami, zelenou cibulkou, celozrnnou horcici a majonezou, citron 169 (L)</li><li>Thajske sataj kari s pecenymi bataty, gaj coj, arasidy, kokosovym mlekem a thajskou bazalkou, jasminova ryze {veganske] 139  </li></ol>
+<ol><li>Peceny filet z cerstveho jinoceskeho kapra a atlanticke makrely s okurkovymi tzatziki, pohanka s pecenou zeleninou, salatek 139</li><li>Peceny filet z cerstveho norskeho lososa s okurkovymi tzatziki, pohantka s pecenou zeleninou, salatek 169</li><li>Kow mo daeng – thajske grilovane veprove ve sladke a vonave marinade se zelenymi bylinkami, jasminova ryze, salatek 139</li><li>Bramborove gnocchi s benatskym ragu z divoke kachny na cervenem vine s rajcaty,  lesnimi houbami a parmezanem, salatek {L} 169</li><li>Maghrebska zapecena saksuka s rajcaty, vejci, paprikami a balkanskym syrem, kuskus, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
