Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Pondělí, 11. 10. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Kulajda</strong>
+<strong>Kapustová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Vepřová krkovička na houbách s rýží NEBO těstovinou</strong>
+<strong>Chilli con carne s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							129,-
 						</span>
 </p>
 <p>
-<strong>Dukátové buchtičky s vanilkovým krémem</strong>
+<strong>Těstoviny se slaninovo-sýrovou omáčkou a rukolou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							105,-
+							127,-
 						</span>
 </p>
 <p>
